--- a/src/app1/app.component.html
+++ b/src/app1/app.component.html
@@ -2,7 +2,7 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-        <a routerLink="rooms" class="nav-link" routerLinkActive="active">Room List</a>
+        <a routerLink="employees" class="nav-link" routerLinkActive="active">Room List</a>
     </li>
     <li class="nav-item">
         <a routerLink="add" class="nav-link" routerLinkActive="active">Add Room</a>
@@ -16,14 +16,12 @@
   <div class="card">
     <div class="card-body">
   <router-outlet></router-outlet>
-      </div>
+    </div>
   </div>
 </div>
 
 <footer class="footer">
   <div class="container">
       <span>Live Coding Digital Innovation One - Kamila Santos Oliveira</span>
-      <br>
-      <span>Participante: Jacó Miranda dos Santos</span>
   </div>
 </footer>
